  have been removed.
* TitleArray, deprecated since 1.41, has been removed.
* UserRightsProxy, deprecated since 1.38, has been removed.
* UserLoginCompleteHook is always called with its $direct parameter set to
  boolean true. The false case has been removed.
* MagicWord::load() has been marked @internal and may change in the future
  without further notice.
* BagOStuff::setNewPreparedValues() now emits deprecation warnings.
* The type of the last parameter of BeforeInitializeHook::onBeforeInitialize
  and MediaWikiPerformActionHook::onMediaWikiPerformAction changed from
  MediaWiki to ActionEntryPoint. Relevant methods are still available on
  the object.
* Classes that override Maintenance::finalSetup() must now declare the
  $settings parameter and pass it on when calling the parent implementation.
  MaintenanceRunner will always provide this parameter when calling
  finalSetup().
* WebResponse::disableForPostSend() is no longer static.
* MediaWiki's virtualrest internal library has been removed in favor of the
  HTTP library like: Guzzle, MultiHttpClient or MwHttpRequest.
* Several deprecated methods have been removed from the Content interface,
  in favor of the respective methods in ContentHandlers. Callers should
  use a more narrow interface like ContentRenderer or ContentTransformer
  when possible. The following methods have been removed from Content:
  - getParserOutput()
  - preSaveTransform()
  - preloadTransform()
  - prepareSave()
* User::blockedFor() and AbstractBlock::getReason(), deprecated in 1.35, have
  been removed. Use AbstractBlock::getReasonComment() instead.
* Use of ActorMigration for any of the following tables, deprecated since 1.34,
  is no longer supported:
  - archive
  - image
  - oldimage
  - filearchive
  - recentchanges
  - logging
  - ipblocks
* ParserOutput::setFlag() and ::getFlag(), deprecated in 1.38, were removed. You
  should use ::setOutputFlag() and ::getOutputFlag() instead.